--- a/Boffalora/Boffalora/src/main/resources/application.properties
+++ b/Boffalora/Boffalora/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.hibernate.SQL=DEBUG
+
